2458 [OneClick]           fixed problem if using the same internal audio track several times
2457 [Audio Encoder]      fixed missing SSRC() function in included AviSynth+
     [Audio Encoder]      improved error handling
2456 [Log]                improved .NET detection
2455 [Update]             cosmetics
2454 [Log]                show information about .NET 2.0 and 4.0
     [Log]                removed information about highest .NET build
2453 [Audio Encoder]      fixed sometimes choosing the wrong decoder (regression of 2448)
2452 [Audio Encoder]      lowered also the priority for the LWLibavAudioSource decoder
     [Audio Encoder]      default order: NicAudio, BassAudio, FFAudioSource, LWLibavAudioSource, DirectShow
2451 [Chapter Creator]    added support for mkv input files
     [Chapter Creator]    added option to specify the minimum title length
     [Chapter Creator]    added option to specify the FPS value
     [Chapter Creator]    improved FPS detection for DVD/Bluray
2450 [LSMASH Indexer]     show time/file progress during indexing
     [LSMASH Indexer]     added possibility to set output file/folder
     [LSMASH Indexer]     blocked indexer if input file is in a read only directory
     [LSMASH Indexer]     lowered the default priority so that it will be used after FFMS
     [LSMASH Indexer]     added log information
     [LSMASH Indexer]     copy the runtimes if required
     [FFMS Indexer]       defaults to LoadPlugin if LoadCPlugin is also possible
2449 [Update]             show the lsmash package in the updater
2448 [LSMASH Indexer]     added LSMASHVideoSource/LWLibavVideoSource support
     [LSMASH Indexer]     as no indexer is available no progress during "indexing" is available
     [LSMASH Indexer]     also the cache file must be created in the same directory as the source file
     [Audio Encoder]      added LSMASHAudioSource/LWLibavAudioSource support
2447 [Update]             fixed a regression in 2446